# hanagram

./: .copier-answers.yml  .dockerignore  .env-sample  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  draw.py  hanabi.py  justfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt  todo.md
.github/workflows/: ci.yml  deps-update.yml  scheduled-test.yml  weekly-ci.yml
docs/: index.md
hanabi/: draw.py  hanabi.py  main.py  play_repl.py
src/hanagram/: __init__.py  draw.py  hanabi.py  play_repl.py  play_telegram.py
tests/: test_.py
