[tool.poetry]
name = "hanagram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^9.1.0"
telepota = "^1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
