[tool.poetry]
name = "hanagram"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Pillow = "^11"
telepota = "^1.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
