[project]
name = "hanagram"
version = "0.1.0"
description = "Telegram bot to play Hanabi with your friends."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "telepota>=1.0",
]

[project.scripts]
screenshot = "hanabi.draw:create_screenshot"
play-repl = "hanabi.hanabi:main"
play-telegram = "hanabi.play_telegram:start_telegram_bot"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
]

[tool.mypy]
files = ["hanabi/*.py"]
